Redundant anti aliasing/blur effect #77370

Closed
opened 2020-06-04 14:28:59 +02:00 by Anže · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-03 18:45, hash: b94ab93dfb
Worked: (2.83.0)

Short description of error
In the viewport and everywhere where you can see an image there seems to be a blur effect added to the pixels. You can't see the real flat squares but a foggy pixel instead. It looks like some kind of interpolation.
The images are correct when looked at outside of Blender. For example if you open the renders in Photoshop they look normal. But if you open any image and put it in the image editor the pixels get blurry.

In the first image I put the sample count to 1 and pixel size to 8x so that you can see the error clearly
Comparison_bug.png

Default scene and altered pixel size settings
example_bug.jpg

In the second image the settings are set to the defualt ones and I have zoomed into the renders.
Closeup_bug.png

Comparison of the same image opened in Photoshop and Blender
Ps_vs_Blender.png

Exact steps for others to reproduce the error

  • Open Blender 2.90.0 Alpha
  • Add a HDRI image to the background to quickly lit the scene

Render the scene and look at it in the image editor

or
  • Import a image into blender
  • Look at it

A test file I used: {F8576485}]

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-03 18:45, hash: `b94ab93dfb` Worked: (2.83.0) **Short description of error** In the viewport and everywhere where you can see an image there seems to be a blur effect added to the pixels. You can't see the real flat squares but a foggy pixel instead. It looks like some kind of interpolation. The images are correct when looked at outside of Blender. For example if you open the renders in Photoshop they look normal. But if you open any image and put it in the image editor the pixels get blurry. In the first image I put the sample count to 1 and pixel size to 8x so that you can see the error clearly ![Comparison_bug.png](https://archive.blender.org/developer/F8576467/Comparison_bug.png) Default scene and altered pixel size settings ![example_bug.jpg](https://archive.blender.org/developer/F8576679/example_bug.jpg) In the second image the settings are set to the defualt ones and I have zoomed into the renders. ![Closeup_bug.png](https://archive.blender.org/developer/F8576478/Closeup_bug.png) Comparison of the same image opened in Photoshop and Blender ![Ps_vs_Blender.png](https://archive.blender.org/developer/F8576523/Ps_vs_Blender.png) **Exact steps for others to reproduce the error** - Open Blender 2.90.0 Alpha - Add a HDRI image to the background to quickly lit the scene # Render the scene and look at it in the image editor ``` or ``` - Import a image into blender - Look at it A test file I used: {[F8576485](https://archive.blender.org/developer/F8576485/290_Bug.blend)}]
Author

Added subscriber: @koko_ze

Added subscriber: @koko_ze
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche
Contributor

I'd consider this a feature, not a bug. The pixel size feature is used to subsample viewport result which is useful to boost interactivity and viewport rendering speed on high DPI monitors, where the 1x resolution scale can be too dense for preview purpose, requiring too many resources to have reasonable rendering performance. Up until recently, the pixel size subsampling was useless because it used nearest neighbor (pixel perfect) image scaling. Now it seems to use bilinear, which is much better as it makes this feature actually useful with high DPI monitors without introducing ugly aliasing artifacts.

You seem to be using that feature wrong. It's not a "make viewport look like a pixel art" filter. It's something intended to be used with high DPI screens. Your screen in 2560x1440 based on the screenshot, so you probably either don't need to use this, or should set it to 2x at the very most. 4x and 8x is meant for screens with huge resolution displays, for example the Mac Pro display.

I'd consider this a feature, not a bug. The pixel size feature is used to subsample viewport result which is useful to boost interactivity and viewport rendering speed on high DPI monitors, where the 1x resolution scale can be too dense for preview purpose, requiring too many resources to have reasonable rendering performance. Up until recently, the pixel size subsampling was useless because it used nearest neighbor (pixel perfect) image scaling. Now it seems to use bilinear, which is much better as it makes this feature actually useful with high DPI monitors without introducing ugly aliasing artifacts. You seem to be using that feature wrong. It's not a "make viewport look like a pixel art" filter. It's something intended to be used with high DPI screens. Your screen in 2560x1440 based on the screenshot, so you probably either don't need to use this, or should set it to 2x at the very most. 4x and 8x is meant for screens with huge resolution displays, for example the Mac Pro display.
Member

Added subscribers: @fclem, @Alaska

Added subscribers: @fclem, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Bisecting shows bdda53fdb2 as the cause, however, I'm not sure if it's intentional or not.

@fclem, are you able to comment?

Can confirm. Bisecting shows bdda53fdb2 as the cause, however, I'm not sure if it's intentional or not. @fclem, are you able to comment?
Author

In #77370#944794, @Rawalanche wrote:
You seem to be using that feature wrong.

I set the viewport pixel size to 8x from the default just so that you can see the effect more clearly and that it is present in the viewport alongside the image editor. And yes I am using a 2560x1440 monitor :)

> In #77370#944794, @Rawalanche wrote: > You seem to be using that feature wrong. I set the viewport pixel size to 8x from the default just so that you can see the effect more clearly and that it is present in the viewport alongside the image editor. And yes I am using a 2560x1440 monitor :)
Clément Foucault self-assigned this 2020-06-04 15:31:50 +02:00

This issue was referenced by ba5b303c88

This issue was referenced by ba5b303c8886c9266309bada1cdeb71bcd8e59a3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77370
No description provided.