DRW: Fix T77370: Redundant anti aliasing/blur effect